Grease Pencil, pressing Ekey to sculpt don't work for left click configurations #48395

Closed
opened 2016-05-10 17:24:24 +02:00 by Daniel Martinez Lara · 5 comments

Blender Version
version: 2.77 (sub 1), branch: master, commit date: 2016-05-10 11:02, hash: 898d040, type: Release
build date: 2016-05-10, 11:04:18

Short description of error
Grease Pencil, pressing Ekey to sculpt don't work for left click configurations

Exact steps for others to reproduce the error

1- Set left click selection in preferences
2- Draw a stroke in 3D viewport
3- Use Ekey to sculpt it

Result: sculpt don't work, only selection

Take care!

**Blender Version** version: 2.77 (sub 1), branch: master, commit date: 2016-05-10 11:02, hash: 898d040, type: Release build date: 2016-05-10, 11:04:18 **Short description of error** Grease Pencil, pressing Ekey to sculpt don't work for left click configurations **Exact steps for others to reproduce the error** 1- Set left click selection in preferences 2- Draw a stroke in 3D viewport 3- Use Ekey to sculpt it Result: sculpt don't work, only selection Take care!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung was assigned by Daniel Martinez Lara 2016-05-10 17:24:24 +02:00
Author
Member

Added subscriber: @pepe-school-land

Added subscriber: @pepe-school-land
Member

Strange...

What mode were you in before entering stroke edit mode? I've found problems with Texture Paint in the past... This may also be related to the problems found here: https://www.youtube.com/watch?v=zGUm-X6xKTE

Hopefully this turns out to be one of those keymap conflict problems instead of a nastier event system bug.

Strange... What mode were you in before entering stroke edit mode? I've found problems with Texture Paint in the past... This may also be related to the problems found here: https://www.youtube.com/watch?v=zGUm-X6xKTE Hopefully this turns out to be one of those keymap conflict problems instead of a nastier event system bug.

This issue was referenced by e3218ded41

This issue was referenced by e3218ded41be2fa88ac4a22c0294473549a3edf9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48395
No description provided.