Fix T48395: Grease Pencil, pressing Ekey to sculpt don't work for left click configurations

When using Left Click select, it wasn't possible to sculpt using E+LMB.

I've changed the order of things in the keymap so that the select operator won't
end up catching and blocking all these events.